# cocktail

./: .tarpaulin.toml  .travis.yml  Cargo.toml  LICENSE  Readme.md  cbindgen.toml  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
benches/: benches.rs  iter_cano.rs  kmer2seq.rs
cocktail/: all.html  index.html  sidebar-items.js
cocktail/binding/: index.html  sidebar-items.js
cocktail/binding/kmer/: fn.cocktail_bit2nuc.html  fn.cocktail_canonical.html  fn.cocktail_comp.html  fn.cocktail_get_first_bit.html  fn.cocktail_get_hash_space_size.html  fn.cocktail_get_kmer_space_size.html  fn.cocktail_hash.html  fn.cocktail_kmer2seq.html  fn.cocktail_nuc2bit.html  fn.cocktail_parity_even.html  fn.cocktail_remove_first_bit.html  (+5 more)
cocktail/kmer/: fn.bit2nuc.html  fn.canonical.html  fn.comp.html  fn.get_first_bit.html  fn.get_hash_space_size.html  fn.get_kmer_space_size.html  fn.hash.html  fn.kmer2seq.html  fn.nuc2bit.html  fn.parity_even.html  fn.remove_first_bit.html  fn.rev.html  fn.revcomp.html  fn.seq2bit.html  index.html  sidebar-items.js
cocktail/rle/: fn.rle2bit.html  fn.rle2kmer.html  fn.rle2seq.html  fn.seq2rle.html  index.html  sidebar-items.js
cocktail/tokenizer/: index.html  sidebar-items.js
src/: binding.rs  bytevec.rs  c_binding.rs  curve.rs  io.rs  kmer.rs  lib.rs  rle.rs  tokenizer.rs
src/binding/: kmer.rs  mod.rs  tokenizer.rs
src/cocktail/: lib.rs.html  rle.rs.html
src/kmer/: lookup_table.rs  mod.rs
src/tokenizer/: basic.rs  canonical.rs  kmer.rs  minimizer.rs  minimizer_bstr.rs  mod.rs  rle.rs
(+42 files in other folders)
