[package]
name = "cocktail"
version = "0.1.0"
authors = ["Pierre Marijon <pmarijon@mpi-inf.mpg.de>"]
edition = "2021"
rust-version = "1.60"

[lib]
name = "cocktail"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]

[dev-dependencies]
rand      = "0.8"
criterion = "0.5"

[[bench]]
name = "benches"
harness = false
