[package]
name = "cocktail"
version = "0.1.0"
authors = ["Pierre Marijon <pmarijon@mpi-inf.mpg.de>"]
edition = "2021"
rust-version = "1.86"

[lib]
name = "cocktail"

[dependencies]

[dev-dependencies]
rand      = { version = "0.10" }
criterion = { version = "0.8" }
biotest   = { version = "0.2", features = ["sequence"] }

[[bench]]
name = "benches"
harness = false
